--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,45 @@
     margin:0px;
     padding:0px;
 }
+/* Title */
+#title{
+    text-align: center;
+    padding:10px;
+    background-color: aliceblue;
+    font-size: 4em;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
 
+/* Image container */
 #container{
     width:90%;
     height:100%;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap:20px;
+    max-width: 1500px;
+    margin:0 auto;
+    padding:20px 10px;
 }
 
 #container img{
-    max-width:45%;
-    max-height:100%;
+    width:100%;
+    max-width: 740px;
+    height:600px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+#container img:hover{
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+}
+/* If there is only 1 image on the bottom, then this code places that image to the very left to avoid having the image in the center*/
+#container::after{
+    content:"";
+    width:740px;
 }
