--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,18 @@
     margin:0px;
     padding:0px;
 }
+/* Scrollbar */
+body::-webkit-scrollbar{
+    width:0.6em;
+}
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+body::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 10px;
+  }
 /* Title */
 #title{
     text-align: center;
