--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,15 @@ body::-webkit-scrollbar-thumb {
     content:"";
     width:740px;
 }
+footer{
+    display: flex;
+    width:100%;
+    height:4vh;
+    background-color: black;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight:300;
+}
