--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ footer{
     display: flex;
     width:100%;
     height:4vh;
-    background-color: black;
+    background-color: rgb(49, 49, 49);
     color: white;
     justify-content: center;
     align-items: center;
@@ -82,5 +82,5 @@ footer{
     font-weight:300;
 }
 footer > p{
-    margin-right: 25rem;
+    margin:0% 10% 0% 10%;
 }
